--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "ejs": "^3.1.9",
+    "express-session": "^1.18.0",
     "mysql2": "^3.9.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "svg-captcha": "^1.4.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
